Activate "internal" profile unless the "public.release" prop is defined
Not sure why the profile wasn't being activated; "activeByDefault" must be
doing something that I don't understand. Based on internet reading, the
general recommendation is to activate UNLESS a specific property is defined
... in this case, activate unless "public.release" is defined.

--- a/pom.xml
+++ b/pom.xml
@@ -518,7 +518,9 @@
         <profile>
             <id>internal</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>!public.release</name>
+                </property>
             </activation>
             <distributionManagement>
                 <repository>
