--- a/wizard-examples/pom.xml
+++ b/wizard-examples/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>3.2.0-rc35</version>
+        <version>3.2.0</version>
     </parent>
 
     <artifactId>glimpse-wizard-examples</artifactId>
