Use "-Dpublic.release" to switch between public/internal Maven profiles
Formerly used "-P release", but the new approach does a more reliable job
of ensuring that exactly one of the two profiles is active.

--- a/pom.xml
+++ b/pom.xml
@@ -506,7 +506,12 @@
         </profile>
 
         <profile>
-            <id>release</id>
+            <id>public-release</id>
+            <activation>
+                <property>
+                    <name>public.release</name>
+                </property>
+            </activation>
             <distributionManagement>
                 <snapshotRepository>
                     <id>ossrh</id>
