Work around another issue, to stay compatible with multiple Java versions
The removal of the built-in java.xml.bind API in Java 11 creates obstacles
to inter-version compatibility. Java 8-10 obviously can't build a Java 11
library, because of language changes. But Java 11 can't build a Java 8-10
library either, because APIs that were built into Java 8-10 are not built
into Java 11.

The glimpse-docking POM has a workaround for those obstacles, but javadoc
chokes on the workaround. So another workaround is required here, to get
javadoc to work.

--- a/pom.xml
+++ b/pom.xml
@@ -125,10 +125,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <doclint>none</doclint>
-                </configuration>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>deploy</id>
@@ -139,7 +136,20 @@
                             <show>public</show>
                             <maxmemory>2056m</maxmemory>
                             <doctitle>Glimpse Data Visualization Library</doctitle>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
+                            <additionalDependencies>
+                                <!-- Keep javadoc from choking on xml-bind-api deps; more info in the docking POM -->
+                                <additionalDependency>
+                                    <groupId>jakarta.xml.bind</groupId>
+                                    <artifactId>jakarta.xml.bind-api</artifactId>
+                                    <version>2.3.2</version>
+                                </additionalDependency>
+                                <additionalDependency>
+                                    <groupId>jakarta.activation</groupId>
+                                    <artifactId>jakarta.activation-api</artifactId>
+                                    <version>1.2.1</version>
+                                </additionalDependency>
+                            </additionalDependencies>
                         </configuration>
                     </execution>
                 </executions>
