--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.metsci.glimpse</groupId>
 		<artifactId>glimpse-parent</artifactId>
-		<version>4.0.0-rc05</version>
+		<version>4.0.0</version>
 	</parent>
 
 	<artifactId>glimpse-core</artifactId>
