--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.metsci.glimpse</groupId>
     <artifactId>glimpse-parent</artifactId>
-    <version>4.0.0-rc05</version>
+    <version>4.0.0</version>
     <packaging>pom</packaging>
 
     <name>Glimpse</name>
